@startuml

class GameState{
    +GameStatus gameStatus
    +List<FieldEvent> fieldEvents
}

enum FieldEvent{
    REVEAL_MINE
    REVEAL_NUMBER
    FLAG
    UNFLAG
}

enum GameStatus{
    PLAYING
    WON
    LOST
}

class FieldToDisplay{
    +int row
    +int col
    +int value
    +FieldEvent event
}


GameStatus --> GameState::gameStatus
FieldEvent --> FieldToDisplay::event
FieldToDisplay --o GameState::fieldEvents
@enduml
